--- a/ssbuilder-web/package.json
+++ b/ssbuilder-web/package.json
@@ -14,6 +14,11 @@
     "mongodb": "^2.0.43",
     "monk": "^1.0.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.9.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-nodemon": "~0.4.0",
+    "grunt-concurrent": "~0.5.0"
   }
 }
