--- a/ssbuilder-web/package.json
+++ b/ssbuilder-web/package.json
@@ -20,5 +20,9 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-nodemon": "~0.4.0",
     "grunt-concurrent": "~0.5.0"
+  },
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "supertest": "^1.1.0"
   }
 }
