--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c #1
 osx_image: xcode7.0 #2
 xcode_project: ssbuilder.xcodeproj #3
-xcode_scheme: SocialStoryBuilder
+xcode_scheme: ssbuilder
 xcode_sdk: ipadsimulator9.0 #5
