--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c #1
 osx_image: xcode7.0 #2
 xcode_project: ssbuilder-ios/ssbuilder.xcodeproj #3
 xcode_scheme: ssbuilder
-xcode_sdk: iphonesimulator9.0 #5
+xcode_sdk: iphonesimulator #5
