--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c #1
 osx_image: xcode7.0 #2
 xcode_project: ssbuilder-ios/ssbuilder.xcodeproj #3
-xcode_scheme: SocialStoryBuilder1
-xcode_sdk: iphonesimulator8.1 #5
+xcode_scheme: ssbuilder
+xcode_sdk: iphonesimulator #5
