--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,8 @@ general:
 test:
   override:
     - mocha
+deployment:
+  dockerhub:
+    branch: master
+    commands:
+      - $TRIGGER_DOCKER_HUB_BUILD
