loading view updates

--- a/SocialStoryBuilder/SocialStoryBuilder.xcodeproj/xcshareddata/xcschemes/SocialStoryBuilder.xcscheme
+++ b/SocialStoryBuilder/SocialStoryBuilder.xcodeproj/xcshareddata/xcschemes/SocialStoryBuilder.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AB61867E1BFC3BAC00940CC6"
+               BuildableName = "SocialStoryBuilderTests.xctest"
+               BlueprintName = "SocialStoryBuilderTests"
+               ReferencedContainer = "container:SocialStoryBuilder.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
