--- a/SocialStoryBuilder/SocialStoryBuilder/Info.plist
+++ b/SocialStoryBuilder/SocialStoryBuilder/Info.plist
@@ -24,6 +24,10 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ShortStack-Regular.ttf</string>
+	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
