Added more UI Tests, and added timing to MongoDB stored in timeStatistics collection for d3 analytics

--- a/SocialStoryBuilder/SocialStoryBuilder.xcodeproj/xcshareddata/xcschemes/SocialStoryBuilder.xcscheme
+++ b/SocialStoryBuilder/SocialStoryBuilder.xcodeproj/xcshareddata/xcschemes/SocialStoryBuilder.xcscheme
@@ -37,6 +37,36 @@
                BlueprintName = "SocialStoryBuilderTests"
                ReferencedContainer = "container:SocialStoryBuilder.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "SocialStoryBuilderTests/testExample()">
+               </Test>
+               <Test
+                  Identifier = "SocialStoryBuilderTests/testGIFImagePerformanceExample()">
+               </Test>
+               <Test
+                  Identifier = "SocialStoryBuilderTests/testJPGImagePerformanceExample()">
+               </Test>
+               <Test
+                  Identifier = "SocialStoryBuilderTests/testNoFileTypeImagePerformanceExample()">
+               </Test>
+               <Test
+                  Identifier = "SocialStoryBuilderTests/testPNGImagePerformanceExample()">
+               </Test>
+               <Test
+                  Identifier = "SocialStoryBuilderUITests/testExample()">
+               </Test>
+            </SkippedTests>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AB51D8011C17C65C00D534E6"
+               BuildableName = "SocialStoryBuilderUITests.xctest"
+               BlueprintName = "SocialStoryBuilderUITests"
+               ReferencedContainer = "container:SocialStoryBuilder.xcodeproj">
+            </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
