--- a/ssbuilder-web/package.json
+++ b/ssbuilder-web/package.json
@@ -22,6 +22,7 @@
     "grunt-concurrent": "~0.5.0"
   },
   "devDependencies": {
+    "cheerio": "^0.19.0",
     "expect.js": "^0.3.1",
     "supertest": "^1.1.0"
   }
